bindings/c/include/ironpress.h

#pragma once

// Generated by cbindgen. Update Rust declarations instead of editing this file.

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

// ABI generation implemented by this library.
#define IRONPRESS_ABI_VERSION 1

// False value accepted by ABI boolean parameters.
#define IRONPRESS_FALSE 0

// Japanese CJK fallback pack.
#define IRONPRESS_FONT_PACK_CJK_JAPANESE 1

// Korean CJK and Hangul fallback pack.
#define IRONPRESS_FONT_PACK_CJK_KOREAN 2

// Simplified Chinese CJK fallback pack.
#define IRONPRESS_FONT_PACK_CJK_SIMPLIFIED_CHINESE 3

// Traditional Chinese CJK fallback pack.
#define IRONPRESS_FONT_PACK_CJK_TRADITIONAL_CHINESE 4

// Monochrome outline emoji fallback pack.
#define IRONPRESS_FONT_PACK_EMOJI 5

// Named ISO A4 page size.
#define IRONPRESS_PAGE_SIZE_A4 1

// Named US Legal page size.
#define IRONPRESS_PAGE_SIZE_LEGAL 3

// Named US Letter page size.
#define IRONPRESS_PAGE_SIZE_LETTER 2

// True value accepted by ABI boolean parameters.
#define IRONPRESS_TRUE 1

// Opaque owner of PDF bytes allocated by Ironpress.
typedef struct IronpressBuffer IronpressBuffer;

// Opaque owner of one configured Ironpress converter.
typedef struct IronpressConverter IronpressConverter;

// Opaque owner of one categorized failure and its UTF-8 diagnostic.
typedef struct IronpressError IronpressError;

// Machine-readable result returned by every fallible C operation.
typedef int32_t IronpressStatus;

// Borrowed bytes supplied by a foreign caller.
typedef struct {
    // First byte, or null when `len` is zero.
    const uint8_t *data;
    // Number of readable bytes starting at `data`.
    size_t len;
} IronpressBytes;

// The CSS parser rejected the document.
#define IRONPRESS_STATUS_CSS 11

// A font or font pack could not be parsed or embedded.
#define IRONPRESS_STATUS_FONT 14

// Ironpress caught an unexpected internal panic at the foreign boundary.
#define IRONPRESS_STATUS_INTERNAL 255

// A pointer, length, number, or output slot violates the function contract.
#define IRONPRESS_STATUS_INVALID_ARGUMENT 1

// A fixed-width integer does not identify a documented ABI value.
#define IRONPRESS_STATUS_INVALID_ENUM 3

// A required opaque handle is null.
#define IRONPRESS_STATUS_INVALID_HANDLE 4

// Text input is not valid UTF-8.
#define IRONPRESS_STATUS_INVALID_UTF8 2

// A filesystem operation failed.
#define IRONPRESS_STATUS_IO 15

// The layout engine could not lay out the document.
#define IRONPRESS_STATUS_LAYOUT 12

// The operation completed successfully.
#define IRONPRESS_STATUS_OK 0

// An output slot was not initialized to null by the caller.
#define IRONPRESS_STATUS_OUTPUT_NOT_EMPTY 5

// The HTML parser rejected the document.
#define IRONPRESS_STATUS_PARSE 10

// The PDF renderer could not produce the document.
#define IRONPRESS_STATUS_RENDER 13

// The security policy rejected the document.
#define IRONPRESS_STATUS_SECURITY 16

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

// Return the stable C ABI generation.
uint32_t ironpress_abi_version(void);

// Return a borrowed pointer to the first PDF byte, or null for a null handle.
//
// # Safety
//
// A non-null `buffer` must identify a live buffer owned by the caller.
const uint8_t *ironpress_buffer_data(const IronpressBuffer *buffer);

// Release a PDF buffer and clear its owning handle.
//
// # Safety
//
// `buffer` must be null or identify a writable owning slot. A non-null value
// in that slot must be the unique buffer owner returned by Ironpress.
IronpressStatus ironpress_buffer_free(IronpressBuffer **buffer);

// Return the PDF byte length, or zero for a null handle.
//
// # Safety
//
// A non-null `buffer` must identify a live buffer owned by the caller.
size_t ironpress_buffer_len(const IronpressBuffer *buffer);

// Add or replace one custom TrueType font family.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_add_font(IronpressConverter *converter,
                                             IronpressBytes family,
                                             IronpressBytes font_data,
                                             IronpressError **out_error);

// Parse and install one optional CJK or emoji fallback pack.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_add_font_pack(IronpressConverter *converter,
                                                  uint32_t kind,
                                                  IronpressBytes font_data,
                                                  IronpressError **out_error);

// Convert UTF-8 HTML through a configured converter.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_convert_html(const IronpressConverter *converter,
                                                 IronpressBytes html,
                                                 IronpressBuffer **out_pdf,
                                                 IronpressError **out_error);

// Convert UTF-8 Markdown through a configured converter.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_convert_markdown(const IronpressConverter *converter,
                                                     IronpressBytes markdown,
                                                     IronpressBuffer **out_pdf,
                                                     IronpressError **out_error);

// Release a converter and clear its owning handle.
//
// # Safety
//
// `converter` must identify the unique handle returned by this library.
IronpressStatus ironpress_converter_free(IronpressConverter **converter);

// Allocate a default converter and transfer it into an empty output slot.
//
// # Safety
//
// Output pointers must follow the ownership and slot rules in `ABI.md`.
IronpressStatus ironpress_converter_new(IronpressConverter **out_converter,
                                        IronpressError **out_error);

// Enable or disable automatic source-image downscaling.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_auto_resize_images(IronpressConverter *converter,
                                                           uint8_t enabled,
                                                           IronpressError **out_error);

// Set flattened-background rasterization resolution in dots per inch.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_background_raster_dpi(IronpressConverter *converter,
                                                              float dpi,
                                                              IronpressError **out_error);

// Enable or disable FlateDecode compression.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_compress(IronpressConverter *converter,
                                                 uint8_t enabled,
                                                 IronpressError **out_error);

// Set CSS filter rasterization resolution in dots per inch.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_filter_dpi(IronpressConverter *converter,
                                                   float dpi,
                                                   IronpressError **out_error);

// Configure the plain-text page footer.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_footer(IronpressConverter *converter,
                                               IronpressBytes footer,
                                               IronpressError **out_error);

// Configure an HTML fragment in the bottom page margin.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_footer_html(IronpressConverter *converter,
                                                    IronpressBytes footer,
                                                    IronpressError **out_error);

// Configure the plain-text page header.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_header(IronpressConverter *converter,
                                               IronpressBytes header,
                                               IronpressError **out_error);

// Configure an HTML fragment in the top page margin.
//
// # Safety
//
// Handles, input bytes, and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_header_html(IronpressConverter *converter,
                                                    IronpressBytes header,
                                                    IronpressError **out_error);

// Set target source-image resolution in dots per inch.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_image_dpi(IronpressConverter *converter,
                                                  float dpi,
                                                  IronpressError **out_error);

// Set JPEG quality. Values above 100 are clamped by the renderer.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_jpeg_quality(IronpressConverter *converter,
                                                     uint8_t quality,
                                                     IronpressError **out_error);

// Configure one uniform physical page margin in points.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_margin(IronpressConverter *converter,
                                               float points,
                                               IronpressError **out_error);

// Configure physical page margins in top, right, bottom, left order.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_margins(IronpressConverter *converter,
                                                float top,
                                                float right,
                                                float bottom,
                                                float left,
                                                IronpressError **out_error);

// Set CSS mask rasterization resolution in dots per inch.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_mask_dpi(IronpressConverter *converter,
                                                 float dpi,
                                                 IronpressError **out_error);

// Enable or disable conservative raster occlusion culling.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_occlusion_cull(IronpressConverter *converter,
                                                       uint8_t enabled,
                                                       IronpressError **out_error);

// Configure one named page size.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_page_size(IronpressConverter *converter,
                                                  uint32_t page_size,
                                                  IronpressError **out_error);

// Configure a custom page size in points.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_page_size_custom(IronpressConverter *converter,
                                                         float width,
                                                         float height,
                                                         IronpressError **out_error);

// Enable or disable HTML sanitization.
//
// # Safety
//
// Handles and output pointers must follow `ABI.md`.
IronpressStatus ironpress_converter_set_sanitize(IronpressConverter *converter,
                                                 uint8_t enabled,
                                                 IronpressError **out_error);

// Release an error and clear its owning handle.
//
// # Safety
//
// `error` must be null or identify a writable owning slot. A non-null value in
// that slot must be the unique error owner returned by Ironpress.
IronpressStatus ironpress_error_free(IronpressError **error);

// Return a borrowed pointer to the first error-message byte.
//
// # Safety
//
// A non-null `error` must identify a live error owned by the caller.
const uint8_t *ironpress_error_message_data(const IronpressError *error);

// Return the UTF-8 error-message length, or zero for a null handle.
//
// # Safety
//
// A non-null `error` must identify a live error owned by the caller.
size_t ironpress_error_message_len(const IronpressError *error);

// Return the status stored in an error handle.
//
// # Safety
//
// A non-null `error` must identify a live error owned by the caller.
IronpressStatus ironpress_error_status(const IronpressError *error);

// Convert UTF-8 HTML with a default one-shot converter.
//
// # Safety
//
// Input bytes and output pointers must follow `ABI.md`.
IronpressStatus ironpress_html_to_pdf(IronpressBytes html,
                                      IronpressBuffer **out_pdf,
                                      IronpressError **out_error);

// Convert UTF-8 Markdown with a default one-shot converter.
//
// # Safety
//
// Input bytes and output pointers must follow `ABI.md`.
IronpressStatus ironpress_markdown_to_pdf(IronpressBytes markdown,
                                          IronpressBuffer **out_pdf,
                                          IronpressError **out_error);

// Return the null-terminated Ironpress package version.
const char *ironpress_version(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus